[package]
name = "cstgs"
version = "0.1.0"
edition = "2024"
authors = ["Amir Hossein Pakdaman"]
description = "Counting and Sampling Triangles from a Graph Stream, with Python bindings (ref=https://www.vldb.org/pvldb/vol6/p1870-aduri.pdf)"
readme = "README.md"

[lib]
name = "cstgs"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16.1"
rand = "0.9.1"
rayon = "1.10"
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py38"] }